media/css/firefox/desktop/index.less
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

@import '../../sandstone/lib.less';
@import 'common.less';

#wrapper {
    margin-top: -162px; // family nav
}

// animation defaults
.fallback {
    display: block;
    margin: 0 auto;
}

.stage {
    display: none;
}

#intro {
    background: #B1D2E3 url(/media/img/firefox/desktop/index/bg-intro.png) left top repeat-x;

    .container {
        position: relative;
        padding: 50px 0 0 0;
        min-height: 0;
    }

    h1 {
        .font-size(64px);
    }

    .lead {
        color: @textColorSecondary;
        .font-size(22px);
        margin-bottom: @baseLine * 2;
    }
}

// download buttons

#overview-intro-download-wrapper {
    display: none;
}

#sticky-download-desktop {
    display: none;

    .download-link {
        width: 160px;

        .download-content {
            padding: 4px 10px;
        }
    }
}

// up to date message

#overview-intro-up-to-date {
    display: none;
    padding: 10px 0 20px;
    font-style: italic;

    &.active {
        display: block;
    }

    &:before {
        display: inline-block;
        content: '';
        width: 24px;
        height: 24px;
        background: transparent url(/media/img/firefox/new/icon-check.svg) left top no-repeat;
        margin-right: 5px;
        vertical-align: text-bottom;
    }
}

html[lang^="en"] #sticky-download-desktop .download-link .download-content {
    padding: 10px 20px;
}

#trust {
    background: #fcfcfa url(/media/img/firefox/desktop/bg-pixelfox-new.png) center bottom no-repeat;

    a {
        .open-sans;
    }
}

#customize {
    background: #0095dd;

    .container {
        .container-dark();
        min-height: 0;
        padding-bottom: 0;

        a {
            color: #fff;
            .open-sans;
        }
    }

    .cta {
        position: absolute;
        bottom: 60px;
        left: 80px;
        width: 500px;
    }
}
/* ... */

